got code running

--- a/notebooks/double_pendulum_diffusion.ipynb
+++ b/notebooks/double_pendulum_diffusion.ipynb
@@ -31,13 +31,11 @@
       "source": [
         "import tensorflow as tf\n",
         "\n",
-        "from colabtools import adhoc_import\n",
+        "# from colabtools import adhoc_import\n",
         "import importlib\n",
-        "from simulation_research.diffusion import ode_datasets\n",
-        "from simulation_research.diffusion import diffusion_unet\n",
-        "from simulation_research.diffusion import samplers\n",
+        "from userdiffusion import ode_datasets, unet, samplers\n",
         "importlib.reload(ode_datasets)\n",
-        "importlib.reload(diffusion_unet)\n",
+        "importlib.reload(unet)\n",
         "importlib.reload(samplers)\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
@@ -202,7 +200,7 @@
       "source": [
         "x = next(dataiter())\n",
         "t = np.random.rand(x.shape[0])\n",
-        "model = diffusion_unet.UNet(diffusion_unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))\n",
+        "model = unet.UNet(unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))\n",
         "params = model.init(random.PRNGKey(42), x=x,t=t,train=False)\n",
         "x.shape"
       ]
