--- a/notebooks/fitzhugh.ipynb
+++ b/notebooks/fitzhugh.ipynb
@@ -33,12 +33,9 @@
         "#tf.config.experimental.set_visible_devices([], \"GPU\")\n",
         "\n",
         "import importlib\n",
-        "from simulation_research.diffusion import ode_datasets\n",
-        "from simulation_research.diffusion import diffusion_unet\n",
-        "from simulation_research.diffusion import samplers\n",
-        "from simulation_research.diffusion import diffusion as train\n",
+        "from userdiffusion import ode_datasets, unet, samplers, diffusion as train\n",
         "importlib.reload(ode_datasets)\n",
-        "importlib.reload(diffusion_unet)\n",
+        "importlib.reload(unet)\n",
         "importlib.reload(samplers)\n",
         "importlib.reload(train)\n",
         "\n",
@@ -104,7 +101,7 @@
       "source": [
         "x = test_x#next(dataiter())\n",
         "t = np.random.rand(x.shape[0])\n",
-        "model = diffusion_unet.UNet(diffusion_unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))"
+        "model = unet.UNet(unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))"
       ]
     },
     {
@@ -597,7 +594,7 @@
       },
       "outputs": [],
       "source": [
-        "from simulation_research.diffusion import samplers\n",
+        "from userdiffusion import samplers\n",
         "\n",
         "prior_scale = 112/300\n",
         "\n",
