--- a/notebooks/load_models_save_data.ipynb
+++ b/notebooks/load_models_save_data.ipynb
@@ -33,12 +33,7 @@
         "#tf.config.experimental.set_visible_devices([], \"GPU\")\n",
         "\n",
         "import importlib\n",
-        "from simulation_research.diffusion import ode_datasets\n",
-        "from simulation_research.diffusion import unet\n",
-        "from simulation_research.diffusion import samplers\n",
-        "from simulation_research.diffusion import diffusion\n",
-        "from simulation_research.diffusion import config as cfg\n",
-        "from simulation_research.diffusion import train\n",
+        "from userdiffusion import ode_datasets, unet, samplers, diffusion, config as cfg, train\n",
         "from clu import checkpoint\n",
         "importlib.reload(ode_datasets)\n",
         "importlib.reload(unet)\n",
