--- a/notebooks/nonlinear_schrodinger.ipynb
+++ b/notebooks/nonlinear_schrodinger.ipynb
@@ -29,7 +29,7 @@
       },
       "outputs": [],
       "source": [
-        "from colabtools import adhoc_import\n",
+        "# from colabtools import adhoc_import\n",
         "import xarray\n",
         "import functools\n",
         "import jax\n",
@@ -687,16 +687,13 @@
         "import tensorflow as tf\n",
         "#tf.config.experimental.set_visible_devices([], \"GPU\")\n",
         "\n",
-        "from colabtools import adhoc_import\n",
+        "# from colabtools import adhoc_import\n",
         "import importlib\n",
-        "from simulation_research.diffusion.config import get_config\n",
-        "from simulation_research.diffusion.train import train_and_evaluate\n",
-        "from simulation_research.diffusion import ode_datasets\n",
-        "from simulation_research.diffusion import diffusion_unet\n",
-        "from simulation_research.diffusion import samplers\n",
-        "from simulation_research.diffusion import diffusion as train\n",
+        "from userdiffusion.config import get_config\n",
+        "from userdiffusion.train import train_and_evaluate\n",
+        "from userdiffusion import ode_datasets, unet, samplers, diffusion as train\n",
         "importlib.reload(ode_datasets)\n",
-        "importlib.reload(diffusion_unet)\n",
+        "importlib.reload(unet)\n",
         "importlib.reload(samplers)\n",
         "importlib.reload(train)"
       ]
@@ -744,7 +741,7 @@
       "source": [
         "x = test_x[None,:,:,None]#next(dataiter())\n",
         "t = np.random.rand(x.shape[0])\n",
-        "model = diffusion_unet.UNet(diffusion_unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))"
+        "model = unet.UNet(unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))"
       ]
     },
     {
@@ -1441,7 +1438,7 @@
       },
       "outputs": [],
       "source": [
-        "from colabtools import adhoc_import\n",
+        "# from colabtools import adhoc_import\n",
         "import importlib\n",
         "import jax_cfd.base as cfd\n",
         "import jax_cfd.spectral.utils as spectral_utils\n",
