--- a/notebooks/train_diagnostics.ipynb
+++ b/notebooks/train_diagnostics.ipynb
@@ -32,14 +32,11 @@
         "import tensorflow as tf\n",
         "tf.config.experimental.set_visible_devices([], \"GPU\")\n",
         "\n",
-        "from colabtools import adhoc_import\n",
+        "# from colabtools import adhoc_import\n",
         "import importlib\n",
-        "from simulation_research.diffusion import ode_datasets\n",
-        "from simulation_research.diffusion import diffusion_unet\n",
-        "from simulation_research.diffusion import samplers\n",
-        "from simulation_research.diffusion import train\n",
+        "from userdiffusion import ode_datasets, unet, samplers, train\n",
         "importlib.reload(ode_datasets)\n",
-        "importlib.reload(diffusion_unet)\n",
+        "importlib.reload(unet)\n",
         "importlib.reload(samplers)\n",
         "importlib.reload(train)\n",
         "\n",
@@ -122,7 +119,7 @@
       "source": [
         "x = test_x#next(dataiter())\n",
         "t = np.random.rand(x.shape[0])\n",
-        "model = diffusion_unet.UNet(diffusion_unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))"
+        "model = unet.UNet(unet.unet_64_config(out_dim=x.shape[-1],base_channels=24))"
       ]
     },
     {
