edits to get train_simplified running

--- a/notebooks/fitzhugh.ipynb
+++ b/notebooks/fitzhugh.ipynb
@@ -150,7 +150,7 @@
         "score_fn = train.train_diffusion(model,dataiter,epochs,diffusion=diff,lr=3e-4)\n",
         "key= jax.random.PRNGKey(38)\n",
         "nll = samplers.compute_nll(diff,score_fn,key,x).mean()\n",
-        "stoch_samples = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=False)\n",
+        "stoch_samples = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=False)\n",
         "err = pmetric(stoch_samples)[0]\n",
         "print(f\"{noise.__name__} gets NLL {nll:.3f} and err {err:.3f}\")"
       ]
@@ -218,7 +218,7 @@
       },
       "outputs": [],
       "source": [
-        "sample_traj = samplers.stochastic_sample(diff,score_fn,key,x[:400].shape,N=1000,traj=True)"
+        "sample_traj = samplers.sde_sample(diff,score_fn,key,x[:400].shape,nsteps=1000,traj=True)"
       ]
     },
     {
@@ -503,9 +503,9 @@
         "    return unobserved_score\n",
         "  return jit(conditioned_scores)\n",
         "\n",
-        "#event_samples = samplers.stochastic_sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape,N=2000,traj=False)\n",
-        "#event_samples_traj = samplers.stochastic_sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape,N=2000,traj=True)\n",
-        "#event_samples_det = samplers.sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape)"
+        "#event_samples = samplers.sde_sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape,nsteps=2000,traj=False)\n",
+        "#event_samples_traj = samplers.sde_sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape,nsteps=2000,traj=True)\n",
+        "#event_samples_det = samplers.ode_sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape)"
       ]
     },
     {
@@ -516,7 +516,7 @@
       },
       "outputs": [],
       "source": [
-        "event_samples_det = samplers.sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape)"
+        "event_samples_det = samplers.ode_sample(diff,event_scores(diff,score_fn,event_constraint),key,mb.shape)"
       ]
     },
     {
@@ -806,9 +806,9 @@
       },
       "outputs": [],
       "source": [
-        "stoch_samples = samplers.stochastic_sample(diff,score_fn,key,x[:400].shape,N=2000,traj=False)\n",
-        "sample_traj = samplers.stochastic_sample(diff,score_fn,key,x[:400].shape,N=2000,traj=True)\n",
-        "det_samples = samplers.sample(diff,score_fn,key,x[:400].shape)"
+        "stoch_samples = samplers.sde_sample(diff,score_fn,key,x[:400].shape,nsteps=2000,traj=False)\n",
+        "sample_traj = samplers.sde_sample(diff,score_fn,key,x[:400].shape,nsteps=2000,traj=True)\n",
+        "det_samples = samplers.ode_sample(diff,score_fn,key,x[:400].shape)"
       ]
     },
     {
@@ -1135,7 +1135,7 @@
       },
       "outputs": [],
       "source": [
-        "conditioned_sample = samplers.sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape)"
+        "conditioned_sample = samplers.ode_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape)"
       ]
     },
     {
@@ -1220,8 +1220,8 @@
       },
       "outputs": [],
       "source": [
-        "# stoch_samples = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=False)\n",
-        "# det_samples = samplers.sample(diff,score_fn,key,x[:30].shape)\n",
+        "# stoch_samples = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=False)\n",
+        "# det_samples = samplers.ode_sample(diff,score_fn,key,x[:30].shape)\n",
         "print(f'ODE performance {pmetric(det_samples)[0]}')\n",
         "print(f'SDE performance {pmetric(stoch_samples)[0]}')"
       ]
@@ -1236,7 +1236,7 @@
       "source": [
         "from jax import random\n",
         "key = random.PRNGKey(45)\n",
-        "#s=s2#,history = samplers.stochastic_sampler(denoiser,params,key,(32,)+data.shape[1:],N=500,smin=sigma_min,smax=sigma_max)\n",
+        "#s=s2#,history = samplers.sde_sampler(denoiser,params,key,(32,)+data.shape[1:],nsteps=500,smin=sigma_min,smax=sigma_max)\n",
         "s = stoch_samples#energy_samples_det#stoch_samples\n",
         "\n",
         "k = 5\n",
@@ -1330,7 +1330,7 @@
         "metric_stds = []\n",
         "Ns = [25,50,100,200,500,1000,2000]\n",
         "for N in Ns:\n",
-        "  s = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=N)\n",
+        "  s = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=N)\n",
         "  mean,std = pmetric(s)\n",
         "  metric_vals.append(mean)\n",
         "  metric_stds.append(std)\n",
@@ -1385,7 +1385,7 @@
         "  return jit(conditioned_scores)\n",
         "\n",
         "slc = slice(condition_amount)\n",
-        "conditioned_samples = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,N=1000,traj=True)\n"
+        "conditioned_samples = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,nsteps=1000,traj=True)\n"
       ]
     },
     {
@@ -1398,7 +1398,7 @@
       "source": [
         "k=30\n",
         "expanded = (mb[None]+jnp.zeros((k,1,1,1))).reshape(mb.shape[0]*k,*mb.shape[1:])#[:,slc]\n",
-        "predictions = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,expanded[:,slc],slc,scale=300.),key,expanded.shape,N=2000,traj=False)"
+        "predictions = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,expanded[:,slc],slc,scale=300.),key,expanded.shape,nsteps=2000,traj=False)"
       ]
     },
     {
