--- a/notebooks/load_models_save_data.ipynb
+++ b/notebooks/load_models_save_data.ipynb
@@ -616,7 +616,7 @@
       "outputs": [],
       "source": [
         "expanded = (mb[None]+jnp.zeros((10,1,1,1))).reshape(mb.shape[0]*10,*mb.shape[1:])#[:,slc]\n",
-        "predictions = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,expanded[:,slc],slc,scale=300.),key,expanded.shape,N=2000,traj=False)"
+        "predictions = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,expanded[:,slc],slc,scale=300.),key,expanded.shape,nsteps=2000,traj=False)"
       ]
     },
     {
