--- a/notebooks/lorenz.ipynb
+++ b/notebooks/lorenz.ipynb
@@ -134,7 +134,7 @@
     "cond =test_x[:,:3]\n",
     "eval_scorefn = partial(score_fn,cond=cond) if ic_conditioning else score_fn\n",
     "nll = samplers.compute_nll(diff,eval_scorefn,key,test_x).mean()\n",
-    "stoch_samples = samplers.stochastic_sample(diff,eval_scorefn,key,test_x.shape,N=1000,traj=False)\n",
+    "stoch_samples = samplers.sde_sample(diff,eval_scorefn,key,test_x.shape,nsteps=1000,traj=False)\n",
     "err = pmetric(stoch_samples)[0]\n",
     "print(f\"{noise.__name__} gets NLL {nll:.3f} and err {err:.3f}\")"
    ]
@@ -235,9 +235,9 @@
    },
    "outputs": [],
    "source": [
-    "stoch_samples = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=False)\n",
-    "sample_traj = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=True)\n",
-    "det_samples = samplers.sample(diff,score_fn,key,x[:30].shape)"
+    "stoch_samples = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=False)\n",
+    "sample_traj = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=True)\n",
+    "det_samples = samplers.ode_sample(diff,score_fn,key,x[:30].shape)"
    ]
   },
   {
@@ -483,7 +483,7 @@
     "  return jit(conditioned_scores)\n",
     "\n",
     "slc = slice(condition_amount)\n",
-    "conditioned_samples = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,N=1000,traj=True)\n"
+    "conditioned_samples = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,nsteps=1000,traj=True)\n"
    ]
   },
   {
@@ -495,7 +495,7 @@
    "outputs": [],
    "source": [
     "expanded = (mb[None]+jnp.zeros((10,1,1,1))).reshape(mb.shape[0]*10,*mb.shape[1:])#[:,slc]\n",
-    "predictions = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,expanded[:,slc],slc,scale=300.),key,expanded.shape,N=2000,traj=False)"
+    "predictions = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,expanded[:,slc],slc,scale=300.),key,expanded.shape,nsteps=2000,traj=False)"
    ]
   },
   {
@@ -571,7 +571,7 @@
     "gt = x[:30]\n",
     "#for pred in [conditioned_samples[-1]]:#,conditioned_sample]:\n",
     "for scale in [10.,100.,300.,1000.,3000.]:\n",
-    "  pred = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc,scale=scale),key,mb.shape,N=2000,traj=False)\n",
+    "  pred = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc,scale=scale),key,mb.shape,nsteps=2000,traj=False)\n",
     "  clamped_errs = jax.lax.clamp(1e-3,rel_err(pred,gt),np.inf)\n",
     "  rel_errs = np.exp(jnp.log(clamped_errs).mean(0))\n",
     "  rel_stds = np.exp(jnp.log(clamped_errs).std(0))\n",
@@ -615,7 +615,7 @@
    },
    "outputs": [],
    "source": [
-    "conditioned_sample = samplers.sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape)"
+    "conditioned_sample = samplers.ode_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape)"
    ]
   },
   {
@@ -702,8 +702,8 @@
    },
    "outputs": [],
    "source": [
-    "# stoch_samples = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=False)\n",
-    "# det_samples = samplers.sample(diff,score_fn,key,x[:30].shape)\n",
+    "# stoch_samples = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=False)\n",
+    "# det_samples = samplers.ode_sample(diff,score_fn,key,x[:30].shape)\n",
     "print(f'ODE performance {pmetric(det_samples)[0]}')\n",
     "print(f'SDE performance {pmetric(stoch_samples)[0]}')"
    ]
@@ -718,7 +718,7 @@
    "source": [
     "from jax import random\n",
     "key = random.PRNGKey(45)\n",
-    "#s=s2#,history = samplers.stochastic_sampler(denoiser,params,key,(32,)+data.shape[1:],N=500,smin=sigma_min,smax=sigma_max)\n",
+    "#s=s2#,history = samplers.sde_sampler(denoiser,params,key,(32,)+data.shape[1:],nsteps=500,smin=sigma_min,smax=sigma_max)\n",
     "s = stoch_samples#energy_samples_det#stoch_samples\n",
     "\n",
     "k = 5\n",
@@ -834,7 +834,7 @@
     "metric_stds = []\n",
     "Ns = [25,50,100,200,500,1000,2000]\n",
     "for N in Ns:\n",
-    "  s = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=N)\n",
+    "  s = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=N)\n",
     "  mean,std = pmetric(s)\n",
     "  metric_vals.append(mean)\n",
     "  metric_stds.append(std)\n",
