--- a/notebooks/train_diagnostics.ipynb
+++ b/notebooks/train_diagnostics.ipynb
@@ -148,7 +148,7 @@
       "source": [
         "import jax\n",
         "key= jax.random.PRNGKey(38)\n",
-        "sample_traj = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=True)"
+        "sample_traj = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=True)"
       ]
     },
     {
@@ -263,7 +263,7 @@
         "  return jit(conditioned_scores)\n",
         "\n",
         "slc = slice(condition_amount)\n",
-        "conditioned_samples = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,N=1000,traj=True)\n"
+        "conditioned_samples = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,nsteps=1000,traj=True)\n"
       ]
     },
     {
@@ -386,9 +386,9 @@
       },
       "outputs": [],
       "source": [
-        "stoch_samples = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=False)\n",
-        "sample_traj = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=1000,traj=True)\n",
-        "det_samples = samplers.sample(diff,score_fn,key,x[:30].shape)"
+        "stoch_samples = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=False)\n",
+        "sample_traj = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=1000,traj=True)\n",
+        "det_samples = samplers.ode_sample(diff,score_fn,key,x[:30].shape)"
       ]
     },
     {
@@ -503,8 +503,8 @@
       "source": [
         "i=14 #@param {type:\"slider\", min:0, max:30, step:1}\n",
         "vs = -correlate1d(best_reconstructions,np.array([-1,0,1])/2/(ds.T[1]-ds.T[0]),axis=2)\n",
-        "z = ode_datasets.pack(best_reconstructions,(vmap(vmap(vmap(ds.M)))(best_reconstructions)@vs[...,None]).squeeze(-1))\n",
-        "Hs = vmap(vmap(vmap(ds.H)))(z)\n",
+        "z = ode_datasets.pack(best_reconstructions,(vmap(vmap(vmap(ds.mass)))(best_reconstructions)@vs[...,None]).squeeze(-1))\n",
+        "Hs = vmap(vmap(vmap(ds.hamiltonian)))(z)\n",
         "fig1 = plt.figure()\n",
         "ax1 = fig1.add_subplot(111)\n",
         "data = Hs[100::25,i,:].T\n",
@@ -526,7 +526,7 @@
         "plt.gcf().add_axes(ax_cb)\n",
         "z0 = z[-1,:,0]\n",
         "z_gts = vmap(ds.integrate,(0,None),0)(z0,ds.T_long)\n",
-        "ax1.plot(ds.T_long,vmap(vmap(ds.H))(z_gts)[i],color='g',lw=3)"
+        "ax1.plot(ds.T_long,vmap(vmap(ds.hamiltonian))(z_gts)[i],color='g',lw=3)"
       ]
     },
     {
@@ -670,7 +670,7 @@
         "  return jit(conditioned_scores)\n",
         "\n",
         "slc = slice(condition_amount)\n",
-        "conditioned_samples = samplers.stochastic_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,N=1000,traj=True)\n"
+        "conditioned_samples = samplers.sde_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape,nsteps=1000,traj=True)\n"
       ]
     },
     {
@@ -703,7 +703,7 @@
       },
       "outputs": [],
       "source": [
-        "conditioned_sample = samplers.sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape)"
+        "conditioned_sample = samplers.ode_sample(diff,inpainting_scores2(diff,score_fn,mb[:,slc],slc),key,mb.shape)"
       ]
     },
     {
@@ -793,8 +793,8 @@
         "  # takes as input q shaped (n,c)\n",
         "  #v = -correlate1d(one_step_xhat,np.array([-1,0,1])/2/(ds.T[1]-ds.T[0]),axis=1)\n",
         "  v = -(q[:-2]-q[2:])/(2*(ds.T[1]-ds.T[0]))\n",
-        "  z = ode_datasets.pack(q[1:-1],(vmap(ds.M)(q[1:-1])@v[...,None]).squeeze(-1))\n",
-        "  Hs = vmap(ds.H)(z)\n",
+        "  z = ode_datasets.pack(q[1:-1],(vmap(ds.mass)(q[1:-1])@v[...,None]).squeeze(-1))\n",
+        "  Hs = vmap(ds.hamiltonian)(z)\n",
         "  return Hs\n",
         "\n",
         "def C(q):\n",
@@ -858,7 +858,7 @@
       },
       "outputs": [],
       "source": [
-        "energy_samples_det = samplers.sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape)\n",
+        "energy_samples_det = samplers.ode_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape)\n",
         "print(f'ODE performance {pmetric(energy_samples_det)[0]}')"
       ]
     },
@@ -871,7 +871,7 @@
       "outputs": [],
       "source": [
         "\n",
-        "energy_samples_stoch = samplers.stochastic_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,N=100,traj=False)\n",
+        "energy_samples_stoch = samplers.sde_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,nsteps=100,traj=False)\n",
         "print(f'SDE performance {pmetric(energy_samples_stoch)[0]}')"
       ]
     },
@@ -895,17 +895,17 @@
       "outputs": [],
       "source": [
         "from scipy.ndimage import correlate1d\n",
-        "energy_samples_traj = samplers.stochastic_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,N=100,traj=True)\n",
+        "energy_samples_traj = samplers.sde_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,nsteps=100,traj=True)\n",
         "n=energy_samples_traj.shape[0]+1\n",
         "ts = (.5+jnp.arange(n)[::-1])[:-1]/n\n",
         "scores = vmap(score_fn)(energy_samples_traj.reshape(len(ts),-1),ts).reshape(energy_samples_traj.shape)\n",
         "best_reconstructions = (energy_samples_traj+diff.sigma(ts)[:,None,None,None]**2*scores)/diff.scale(ts)[:,None,None,None]\n",
         "vs = -correlate1d(best_reconstructions,np.array([-1,0,1])/2/(ds.T[1]-ds.T[0]),axis=2)\n",
-        "z = ode_datasets.pack(best_reconstructions,(vmap(vmap(vmap(ds.M)))(best_reconstructions)@vs[...,None]).squeeze(-1))\n",
-        "Hs = vmap(vmap(vmap(ds.H)))(z)\n",
+        "z = ode_datasets.pack(best_reconstructions,(vmap(vmap(vmap(ds.mass)))(best_reconstructions)@vs[...,None]).squeeze(-1))\n",
+        "Hs = vmap(vmap(vmap(ds.hamiltonian)))(z)\n",
         "kstart=10\n",
         "z0 = z[-1,:,kstart]\n",
-        "#print(vmap(ds.H)(z0)[i])\n",
+        "#print(vmap(ds.hamiltonian)(z0)[i])\n",
         "z_gts = vmap(ds.integrate,(0,None),0)(z0,ds.T_long[kstart:])"
       ]
     },
@@ -956,7 +956,7 @@
         "cb1.set_label('diffusion time (0,1)')\n",
         "plt.gcf().add_axes(ax_cb)\n",
         "\n",
-        "ax1.plot(ds.T_long[kstart:],vmap(vmap(ds.H))(z_gts)[i],color='g',lw=3)"
+        "ax1.plot(ds.T_long[kstart:],vmap(vmap(ds.hamiltonian))(z_gts)[i],color='g',lw=3)"
       ]
     },
     {
@@ -1476,7 +1476,7 @@
       },
       "outputs": [],
       "source": [
-        "energy_samples_stoch = samplers.stochastic_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,N=1000,traj=False)\n",
+        "energy_samples_stoch = samplers.sde_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,nsteps=1000,traj=False)\n",
         "print(f'SDE performance {pmetric(energy_samples_stoch)[0]}')"
       ]
     },
@@ -1499,7 +1499,7 @@
       },
       "outputs": [],
       "source": [
-        "energy_samples_det = samplers.sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape)\n",
+        "energy_samples_det = samplers.ode_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape)\n",
         "print(f'ODE performance {pmetric(energy_samples_det)[0]}')"
       ]
     },
@@ -1512,17 +1512,17 @@
       "outputs": [],
       "source": [
         "from scipy.ndimage import correlate1d\n",
-        "energy_samples_traj = samplers.stochastic_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,N=1000,traj=True)\n",
+        "energy_samples_traj = samplers.sde_sample(diff,energy_conditioned_scores(diff,score_fn),key,mb.shape,nsteps=1000,traj=True)\n",
         "n=energy_samples_traj.shape[0]+1\n",
         "ts = (.5+jnp.arange(n)[::-1])[:-1]/n\n",
         "scores = vmap(score_fn)(energy_samples_traj.reshape(len(ts),-1),ts).reshape(energy_samples_traj.shape)\n",
         "best_reconstructions = (energy_samples_traj+diff.sigma(ts)[:,None,None,None]**2*scores)/diff.scale(ts)[:,None,None,None]\n",
         "vs = -correlate1d(best_reconstructions,np.array([-1,0,1])/2/(ds.T[1]-ds.T[0]),axis=2)\n",
-        "z = ode_datasets.pack(best_reconstructions,(vmap(vmap(vmap(ds.M)))(best_reconstructions)@vs[...,None]).squeeze(-1))\n",
-        "Hs = vmap(vmap(vmap(ds.H)))(z)\n",
+        "z = ode_datasets.pack(best_reconstructions,(vmap(vmap(vmap(ds.mass)))(best_reconstructions)@vs[...,None]).squeeze(-1))\n",
+        "Hs = vmap(vmap(vmap(ds.hamiltonian)))(z)\n",
         "kstart=10\n",
         "z0 = z[-1,:,kstart]\n",
-        "#print(vmap(ds.H)(z0)[i])\n",
+        "#print(vmap(ds.hamiltonian)(z0)[i])\n",
         "z_gts = vmap(ds.integrate,(0,None),0)(z0,ds.T_long[kstart:])"
       ]
     },
@@ -1562,7 +1562,7 @@
         "cb1.set_label('diffusion time (0,1)')\n",
         "plt.gcf().add_axes(ax_cb)\n",
         "\n",
-        "ax1.plot(ds.T_long[kstart:],vmap(vmap(ds.H))(z_gts)[i],color='g',lw=3)"
+        "ax1.plot(ds.T_long[kstart:],vmap(vmap(ds.hamiltonian))(z_gts)[i],color='g',lw=3)"
       ]
     },
     {
@@ -1584,8 +1584,8 @@
         "  k=kstart\n",
         "  q = qs[k:]\n",
         "  v = -(q[:-2]-q[2:])/(2*(ds.T[1]-ds.T[0]))\n",
-        "  #print(vmap(ds.M)(q[1:-1]).shape,v.shape)\n",
-        "  z = ode_datasets.pack(q[1:-1],(vmap(ds.M)(q[1:-1])@v[...,None]).squeeze(-1))\n",
+        "  #print(vmap(ds.mass)(q[1:-1]).shape,v.shape)\n",
+        "  z = ode_datasets.pack(q[1:-1],(vmap(ds.mass)(q[1:-1])@v[...,None]).squeeze(-1))\n",
         "  T = ds.T_long[k+1:-1]\n",
         "  z_gt = ds.integrate(z[0],T)\n",
         "  return jnp.log(rel_err(z,z_gt)[1:len(T)//3]).mean()\n",
@@ -1613,8 +1613,8 @@
       },
       "outputs": [],
       "source": [
-        "stoch_samples = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=2000,traj=False)\n",
-        "det_samples = samplers.sample(diff,score_fn,key,x[:30].shape)\n",
+        "stoch_samples = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=2000,traj=False)\n",
+        "det_samples = samplers.ode_sample(diff,score_fn,key,x[:30].shape)\n",
         "print(f'ODE performance {pmetric(det_samples)[0]}')\n",
         "print(f'SDE performance {pmetric(stoch_samples)[0]}')"
       ]
@@ -1628,13 +1628,13 @@
       "outputs": [],
       "source": [
         "key = random.PRNGKey(45)\n",
-        "#s=s2#,history = samplers.stochastic_sampler(denoiser,params,key,(32,)+data.shape[1:],N=500,smin=sigma_min,smax=sigma_max)\n",
+        "#s=s2#,history = samplers.sde_sampler(denoiser,params,key,(32,)+data.shape[1:],nsteps=500,smin=sigma_min,smax=sigma_max)\n",
         "s = stoch_samples\n",
         "\n",
         "k = 5\n",
         "q = s[:,k:]\n",
         "v = -(q[:,:-2]-q[:,2:])/(2*(ds.T[1]-ds.T[0]))\n",
-        "z = ode_datasets.pack(q[:,1:-1],(vmap(vmap(ds.M))(q[:,1:-1])@v[...,None]).squeeze(-1))\n",
+        "z = ode_datasets.pack(q[:,1:-1],(vmap(vmap(ds.mass))(q[:,1:-1])@v[...,None]).squeeze(-1))\n",
         "T = ds.T_long[k+1:-1]\n",
         "z0 = z[:,0]\n",
         "z_gts = vmap(ds.integrate,(0,None),0)(z0,T)\n",
@@ -1672,9 +1672,9 @@
       },
       "outputs": [],
       "source": [
-        "H_gts = vmap(vmap(ds.H))(z_gts)\n",
+        "H_gts = vmap(vmap(ds.hamiltonian))(z_gts)\n",
         "for pred in [z,z_pert,z_random]:\n",
-        "  Hs = vmap(vmap(ds.H))(pred)\n",
+        "  Hs = vmap(vmap(ds.hamiltonian))(pred)\n",
         "  clamped_errs = jax.lax.clamp(1e-3,jnp.abs(Hs-H_gts)/jnp.abs(Hs*H_gts),np.inf)\n",
         "  rel_errs = np.exp(jnp.log(clamped_errs).mean(0))\n",
         "  rel_stds = np.exp(jnp.log(clamped_errs).std(0))\n",
@@ -1748,7 +1748,7 @@
         "metric_stds = []\n",
         "Ns = [25,50,100,200,500,1000,2000]\n",
         "for N in Ns:\n",
-        "  s = samplers.stochastic_sample(diff,score_fn,key,x[:30].shape,N=N)\n",
+        "  s = samplers.sde_sample(diff,score_fn,key,x[:30].shape,nsteps=N)\n",
         "  mean,std = pmetric(s)\n",
         "  metric_vals.append(mean)\n",
         "  metric_stds.append(std)\n",
