--- a/notebooks/relative_error.ipynb
+++ b/notebooks/relative_error.ipynb
@@ -183,7 +183,7 @@
     "        train=False,\n",
     "        cond=main_module.condition_on_initial_time_steps(x_sample, cfg.dataset.time_step_count_conditioning),\n",
     "    )\n",
-    "    ema_params = orbax_checkpointer.restore(cfg.run_dir/'best_ema')\n",
+    "    ema_params = orbax_checkpointer.restore(cfg.run_dir/'last_ema')\n",
     "\n",
     "    if isinstance(cfg.model, cs.ModelDiffusion):\n",
     "        jax_lightning = diffusion.JaxLightning(cfg, jax.random.key(0), dataloaders, data_std, None, model)\n",
